--- a/NetworkInterfaceConfigurator/Views/MainWindow.xaml
+++ b/NetworkInterfaceConfigurator/Views/MainWindow.xaml
@@ -298,17 +298,32 @@
             </Grid>
         </Grid>
         <Grid x:Name="gridFooter" Grid.Row="1">
-            <StatusBar
-                Background="{StaticResource BrushVeryDarkGray}"
-                Width="Auto"
-                Height="20">
-                <TextBlock Text="{Binding Debug}"
-                    Margin="3,0,0,0"
-                    VerticalAlignment="Center"
-                    Foreground="{StaticResource BrushGreen}"/>
-                <StatusBarItem HorizontalAlignment="Right">
-                    <ResizeGrip 
-                        Opacity="0.75"/>
+            <StatusBar Background="{StaticResource BrushVeryDarkGray}"
+                       Width="Auto"
+                       Height="20"
+                       HorizontalContentAlignment="Stretch">
+                <StatusBar.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="23" />
+                            </Grid.ColumnDefinitions>
+                        </Grid>
+                    </ItemsPanelTemplate>
+                </StatusBar.ItemsPanel>
+                <StatusBarItem Grid.Column="0">
+                    <TextBlock Text="{Binding Debug}"
+                               TextTrimming="CharacterEllipsis"
+                               Margin="3,0,0,0"
+                               HorizontalAlignment="Stretch"
+                               VerticalAlignment="Center"
+                               Foreground="{StaticResource BrushGreen}"/>
+                </StatusBarItem>
+                <StatusBarItem Grid.Column="1">
+                    <ResizeGrip HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Opacity="0.75"/>
                 </StatusBarItem>
             </StatusBar>
         </Grid>
