Completed design of Presets model. Changed input data for Edit and Add methods in presetDB. Added presetName to DB table. Finded way for apply ItemTemplateStyles for MenuItem and ComboBoxItem (ItemContainerStyle). Defined PresetMenu and it's MenuItem style.

--- a/NetworkInterfaceConfigurator/Resources/ComboBox.xaml
+++ b/NetworkInterfaceConfigurator/Resources/ComboBox.xaml
@@ -97,7 +97,7 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type ComboBoxItem}">
+    <Style x:Key="AdapterSelectorItem" TargetType="{x:Type ComboBoxItem}">
         <Setter Property="SnapsToDevicePixels" Value="true" />
         <Setter Property="OverridesDefaultStyle" Value="true" />
         <Setter Property="Foreground" Value="{StaticResource BrushWhite}"/>
