--- a/NetworkInterfaceConfigurator/App.xaml
+++ b/NetworkInterfaceConfigurator/App.xaml
@@ -13,6 +13,8 @@
                 <ResourceDictionary Source="Resources/Texts.xaml"/>
                 <ResourceDictionary Source="Resources/Buttons.xaml"/>
                 <ResourceDictionary Source="Resources/ScrollBar.xaml"/>
+                
+                <ResourceDictionary Source="Resources/Preset.xaml"/>
                 <ResourceDictionary Source="Resources/ComboBox.xaml"/>
                 <ResourceDictionary Source="Resources/Window.xaml"/>
             </ResourceDictionary.MergedDictionaries>
