Removed checking equal values before change adapter settings. Development of behavior for presets buttons has been completed. Allowed cleaning DNS.

--- a/NetworkInterfaceConfigurator/Resources/Buttons.xaml
+++ b/NetworkInterfaceConfigurator/Resources/Buttons.xaml
@@ -38,7 +38,7 @@
         <Setter Property="Background" Value="{StaticResource BrushVeryDarkGray}"/>
         <Setter Property="Foreground" Value="{StaticResource BrushWhite}"/>
         <Setter Property="FontSize" Value="{StaticResource Big}"/>
-        <Setter Property="FontFamily" Value="{StaticResource BoldFont}"/>
+        <Setter Property="FontFamily" Value="{StaticResource BoldFont-Light}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
